fixed cart issue with name overflow

--- a/client/src/css/cart.css
+++ b/client/src/css/cart.css
@@ -37,12 +37,20 @@
 .cartItem {
 	margin: 20px;
 	width: 250px;
-	height: 500px;
-	display: flex;
+	height: 550px;
 	justify-content: space-evenly;
+	padding: 20px;
+	
+	/* width: 300px;
+	height: 700px;
+	border-radius: 50%;
+	justify-content: flex-end;
+	align-items: center;
+	padding-bottom: 60px; */
+
+	display: flex;
 	flex-direction: column;
 	border: 2px solid var(--mainBackgroundColor);
-	padding: 20px;
 	color: var(--mainBackgroundColor);
 }
 .cartItem * {
@@ -54,6 +62,8 @@
 	font-weight: bold;
 	width: 200px;
 	cursor: pointer;
+
+	/* text-align: center; */
 }
 .cartGrandTotal {
 	border-top: 2px solid var(--mainBackgroundColor);
